Improve test for checking when list is empty from db